k8s/aks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-integration
  labels:
    name: cloud-integration
